--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -217,7 +217,7 @@
                         <h2>Register Here</h2>
                         <p>Already have an account ? <a href="login.html">Login Here</a></p>
 
-                        <form class="form" method="post" action="/patient/register">
+                        <form class="form" method="post" action="/patient/register" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
@@ -260,17 +260,15 @@
                                         <input type="text" name="nation" placeholder="nation" required="">
                                     </div>
                                 </div>
-
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="file" name="image" placeholder="image" required="">
+                                    </div>
+                                </div>
                                 <div class="col-12">
                                     <div class="form-group login-btn">
                                         <button class="btn" type="submit">Login</button>
                                     </div>
-                                    <div class="checkbox">
-                                        <label class="checkbox-inline" for="2"><input name="news" id="2"
-                                                                                      type="checkbox">Yes, I agree with
-                                            all</label>
-                                    </div>
-                                    <a href="#" class="terms">Terms & Conditions</a>
                                 </div>
                             </div>
                         </form>
