--- a/src/main/resources/templates/updatePatient.html
+++ b/src/main/resources/templates/updatePatient.html
@@ -1,8 +1,6 @@
-
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="Site keywords here">
@@ -14,7 +12,8 @@
 
     <link rel="icon" href="/img/favicon.png">
 
-    <link href="../../css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
+    <link href="/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap">
+    <link href="/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
           rel="stylesheet">
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -58,194 +57,91 @@
         </div>
     </div>
 </div>
-
-
-<div class="color-plate">
-    <a class="color-plate-icon"><i class="fa fa-cog fa-spin"></i></a>
-    <h4>Medikit</h4>
-    <p>Here is some awesome color's available on Medikit Template.</p>
-    <span class="color1"></span>
-    <span class="color2"></span>
-    <span class="color3"></span>
-    <span class="color4"></span>
-    <span class="color5"></span>
-    <span class="color6"></span>
-    <span class="color7"></span>
-    <span class="color8"></span>
-    <span class="color9"></span>
-    <span class="color10"></span>
-    <span class="color11"></span>
-    <span class="color12"></span>
-</div>
-
-
-<header class="header">
-
-    <div class="topbar">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-md-5 col-12">
-
-                    <ul class="top-link">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Doctors</a></li>
-                        <li><a href="#">Contact</a></li>
-                        <li><a href="#">FAQ</a></li>
-                    </ul>
-
-                </div>
-                <div class="col-lg-6 col-md-7 col-12">
-
-                    <ul class="top-contact">
-                        <li><i class="fa fa-phone"></i>+880 1234 56789</li>
-                        <li><i class="fa fa-envelope"></i><a
-                                href="/js/cdn-cgi/l/email-protection#6e1d1b1e1e011c1a2e17011b1c030f0702400d0103"><span
-                                class="__cf_email__" data-cfemail="9cefe9ececf3eee8dce5f3e9eef1fdf5f0b2fff3f1">[email&#160;protected]</span></a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="header-inner">
-        <div class="container">
-            <div class="inner">
-                <div class="row">
-                    <div class="col-lg-3 col-md-3 col-12">
-
-                        <div class="logo">
-                            <a href="index.html"><img src="/img/logo.png" alt="#"></a>
-                        </div>
-
-
-                        <div class="mobile-nav"></div>
-
-                    </div>
-                    <div class="col-lg-7 col-md-9 col-12">
-
-                        <div class="main-menu">
-                            <nav class="navigation">
-                                <ul class="nav menu">
-                                    <li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="index.html">Default Homepage</a></li>
-                                            <li><a href="index2.html">Animation Homepage</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Doctos <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="doctors.html">Doctor</a></li>
-                                            <li><a href="doctor-details.html">Doctor Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Services <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="service.html">Service</a></li>
-                                            <li><a href="service-details.html">Service Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Pages <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="appointment.html">Appointment</a></li>
-                                            <li><a href="time-table.html">Time Table</a></li>
-                                            <li><a href="testimonials.html">Testimonials</a></li>
-                                            <li><a href="pricing.html">Our Pricing</a></li>
-                                            <li><a href="register.html">Sign Up</a></li>
-                                            <li><a href="login.html">Login</a></li>
-                                            <li><a href="faq.html">Faq</a></li>
-                                            <li><a href="mail-success.html">Mail Success</a></li>
-                                            <li><a href="404.html">404 Error</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Blogs <i class="icofont-rounded-down"></i></a>
-                                        <ul class="dropdown">
-                                            <li><a href="blog-grid.html">Blog Grid</a></li>
-                                            <li><a href="blog-single.html">Blog Details</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">Contact Us</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-
-                    </div>
-                    <div class="col-lg-2 col-12">
-                        <div class="get-quote">
-                            <a href="appointment.html" class="btn">Appointment</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</header>
-
-
 <div class="breadcrumbs overlay">
     <div class="container">
         <div class="bread-inner">
             <div class="row">
                 <div class="col-12">
-                    <h2>Login</h2>
+                    <h2>Update</h2>
                     <ul class="bread-list">
                         <li><a href="index.html">Home</a></li>
                         <li><i class="icofont-simple-right"></i></li>
-                        <li class="active">Login</li>
+                        <li class="active">Update Patient</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-<section class="login section">
+<section class="register section">
     <div class="container">
         <div class="inner">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="login-left">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="login-form">
-                        <h2>Login Here</h2>
-                        <p>Didn't you account yet ? <a href="register.html">Register Here</a></p>
-
-                        <form class="form" method="post" action="/login">
+               <img th:src="@{/getImage(imageName=${patient.getPicName()})}" width="100"/>
+                        <form class="form" method="post" action="/patient/update" enctype="multipart/form-data">
+                            <input name="id" type="hidden" th:value="${patient.id}">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="text" name="username" placeholder="Your Email">
+                                        <input type="text" name="name" placeholder="First Name" required="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="password" name="password" placeholder="Password">
+                                        <input type="text" name="surname" placeholder="Last Name" required="">
                                     </div>
                                 </div>
-                                <div class="col-12">
 
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="email" placeholder="Email" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="password" name="password" placeholder="Password" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="date" name="birthDate" placeholder="Birthday" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="region" placeholder="Region" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="address" placeholder="address" required="">
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="nation" placeholder="nation" required="">
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="file" name="image" placeholder="image" required="">
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
                                     <div class="form-group login-btn">
                                         <button class="btn" type="submit">Login</button>
                                     </div>
-                                    <a href="/patient/register">Register</a>
-                                </div>
+                            </div>
+                            </div>
                         </form>
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-
 <footer id="footer" class="footer ">
 
     <div class="footer-top">
@@ -344,7 +240,7 @@
 </footer>
 
 
-<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 
 <script src="/js/jquery-migrate-3.0.0.js"></script>
@@ -379,14 +275,14 @@
 
 <script src="/js/jquery.magnific-popup.min.js"></script>
 
-<script src="/js/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="../../ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
 <script src="/js/bootstrap.min.js"></script>
 
 <script src="/js/main.js"></script>
-<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
+<script defer="" src="../../beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
         integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
-        data-cf-beacon='{"rayId":"7d055790fe8d3362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
+        data-cf-beacon='{"rayId":"7d05578d1d983362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
         crossorigin="anonymous"></script>
 </body>
 </html>
