--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -381,7 +381,7 @@
 </footer>
 
 
-<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 
 <script src="/js/jquery-migrate-3.0.0.js"></script>
@@ -416,12 +416,12 @@
 
 <script src="/js/jquery.magnific-popup.min.js"></script>
 
-<script src="../../ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="/js/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
 <script src="/js/bootstrap.min.js"></script>
 
 <script src="/js/main.js"></script>
-<script defer="" src="../../beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
+<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
         integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
         data-cf-beacon='{"rayId":"7d05578d1d983362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
         crossorigin="anonymous"></script>
